--- a/arch/arm64/configs/zc550kl-perf_defconfig
+++ b/arch/arm64/configs/zc550kl-perf_defconfig
@@ -541,6 +541,7 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_FRANDOM=y
+CONFIG_POWERSUSPEND=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_CLUSTER_PLUG=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
