--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -564,12 +564,19 @@ config MSM_PERFORMANCE
 config MSM_PERFORMANCE_HOTPLUG_ON
         bool "Hotplug functionality through msm_performance turned on"
         depends on MSM_PERFORMANCE
-        default y
+        default n
         help
 	  If some other core-control driver is present turn off the core-control
 	  capability of msm_performance driver. Setting this flag to false will
           compile out the nodes needed for core-control functionality through
           msm_performance.
+
+config FORCE_FAST_CHARGE
+	bool "Force faster charge rate for AC/USB"
+	default y
+ 	help
+	  This allows users to override default charge rate for both USB and AC
+	  charger input current
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
