enable and fix powersuspend compilation

--- a/arch/arm64/configs/zc550kl-perf_defconfig
+++ b/arch/arm64/configs/zc550kl-perf_defconfig
@@ -544,6 +544,7 @@ CONFIG_FRANDOM=y
 CONFIG_POWERSUSPEND=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_CLUSTER_PLUG=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Random Number Generation
 CONFIG_CRYPTO_HW=y
