--- a/arch/arm64/configs/zc550kl-perf_defconfig
+++ b/arch/arm64/configs/zc550kl-perf_defconfig
@@ -540,6 +540,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Random Number Generation
 CONFIG_CRYPTO_HW=y
