--- a/arch/arm64/configs/zc550kl-perf_defconfig
+++ b/arch/arm64/configs/zc550kl-perf_defconfig
@@ -541,6 +541,12 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_MSM_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_MSM_SLEEPER=y
+CONFIG_INTELLI_PLUG
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
 # Random Number Generation
 CONFIG_CRYPTO_HW=y
